# LRT_meldog_ros

./: .gitignore  .mailmap
.github/workflows/: ci.yml
DOCS/Meldog Local Network/: Dokumentacja do sieci Meldoga.md
legacy_packages/meldog_description_legacy/: CMakeLists.txt  package.xml
legacy_packages/meldog_description_legacy/controllers/: meldog_joint_controllers.yaml
meldog_calibration/moteus_calibration/: package.xml  setup.cfg  setup.py
meldog_calibration/moteus_calibration/moteus_calibration/: main.py  main_async.py  moteus_controller.py  moteus_controller_async.py  terminal_interface.py  terminal_interface_async.py  urdf_offset_generator.py  urdf_offset_parser.py
meldog_description/: CMakeLists.txt
meldog_description/cl_commands/: single_joint_test.txt
meldog_description/controllers/: meldog_controllers.yaml  meldog_joint_controllers.yaml
meldog_description/description/: meldog_core.urdf  meldog_core.urdf.xacro
meldog_description/description/gazebo/: contact_gazebo_setup.urdf.xacro  gazebo_properties.urdf.xacro  imu_gazebo_setup.urdf.xacro
meldog_description/description/links/: trunk.urdf.xacro
meldog_description/description/macros/: contact_sensor_macro.urdf.xacro  link_macro.urdf.xacro  sensor_macro.urdf.xacro
meldog_description/description/ros2_control/: czujnik.urdf.xacro  hardware_properties.urdf.xacro  imu_gazebo_setup.urdf.xacro  meldog_gazebo_ros2_control.urdf.xacro  ros2_control_macros.urdf.xacro
meldog_description/launch/: meldog_gazebo.launch.py
meldog_description/meshes/collision/: trunk_collision.stl
meldog_description/meshes/visual/: LL_vis_v2.stl
meldog_description/worlds/: simple.sdf
meldog_leg_description/: CMakeLists.txt
meldog_leg_description/controllers/: joint_controller.yaml  meldog_leg_controllers.yaml
meldog_leg_description/description/: leg_core.urdf.xacro  meldog_core.urdf  meldog_core.urdf.xacro
meldog_leg_description/description/gazebo/: gazebo_properties.urdf.xacro  meldog_leg_gazebo.urdf.xacro
meldog_leg_description/description/joints/foot/: F_joint.urdf.xacro  LRF_joint.urdf.xacro
meldog_leg_description/description/joints/hip/: H_joint.urdf.xacro  LRH_joint.urdf.xacro
meldog_leg_description/description/joints/knee/: K_joint.urdf.xacro  LRK_joint.urdf.xacro
meldog_leg_description/description/joints/mount/: M_joint.urdf.xacro
meldog_leg_description/description/joints/properties/: H_joint_properties.urdf.xacro  M_joint_properties.urdf.xacro  T_joint_properties.urdf.xacro
meldog_leg_description/description/joints/trunk/: LRT_joint.urdf.xacro
meldog_leg_description/description/links/: mount.urdf.xacro  trunk.urdf.xacro
meldog_leg_description/description/links/foot/: F_link.urdf.xacro
meldog_leg_description/description/links/hip/: H_link.urdf.xacro
meldog_leg_description/description/links/lower_limb/: LL_link.urdf.xacro
meldog_leg_description/description/links/upper_limb/: UL_link.urdf.xacro
meldog_leg_description/description/macros/: link_macro.urdf.xacro
meldog_leg_description/description/ros2_control/: hardware_properties.urdf.xacro  meldog_gazebo_ros2_control.urdf.xacro  meldog_leg_gazebo_ros2_control.urdf.xacro
meldog_leg_description/launch/: meldog_leg_gazebo.launch.py  meldog_leg_rviz.launch.xml
meldog_leg_description/meshes/visual/: foot_vis.stl
meldog_leg_description/rviz/: meldog_config.rviz
meldog_network_description/: README.md
meldog_tests/meldog_launch_tests/launch/: rviz2.launch.py
meldog_tests/meldog_standing_test/: CMakeLists.txt  package.xml
meldog_tests/meldog_standing_test/bringup/config/: base_controller_config.yaml
meldog_tests/meldog_standing_test/bringup/launch/: base_controller.launch.py
meldog_tests/meldog_standing_test/include/meldog_standing_test/: BaseControllerNode.hpp
meldog_tests/meldog_standing_test/include/meldog_standing_test/core/: BaseController.hpp
meldog_tests/meldog_standing_test/include/meldog_standing_test/path_management/: package_path.h.in
meldog_tests/meldog_standing_test/src/: BaseControllerNode.cpp  main.cpp
meldog_tests/meldog_standing_test/src/core/: BaseController.cpp
ros2_control_commands/: README.md
src/joint_controller_msgs/: CMakeLists.txt  package.xml
src/joint_controller_msgs/msg/: JointCommand.msg
src/joint_controller_ros2_control/: CMakeLists.txt  joint_controller.xml  package.xml
src/joint_controller_ros2_control/include/joint_controller_ros2_control/: joint_controller.hpp  visibility_control.hpp
src/joint_controller_ros2_control/include/joint_controller_ros2_control/joint_controller_core/: joint_controller_core.hpp
src/joint_controller_ros2_control/include/joint_controller_ros2_control/pid_controller/: pid_controller.hpp
src/joint_controller_ros2_control/src/: joint_controller.cpp  joint_controller_parameters.yaml
src/joint_controller_ros2_control/src/joint_controller_core/: joint_controller_core.cpp
src/joint_controller_ros2_control/src/pid_controller/: pid_controller.cpp
src/joint_controller_ros2_control/test/bringup/config/: chaining_joint_test.yaml  multiple_joints_test.yaml  single_joint_test.yaml
src/joint_controller_ros2_control/test/bringup/launch/: chaining_joint_test.launch.py  multiple_joints_test.launch.py  rviz.launch.py  single_joint_test.launch.py
src/joint_controller_ros2_control/test/cl_commands/: chaining_joint_test.txt  multiple_joints_test.txt  single_joint_sinus.cpp  single_joint_test.txt
src/joint_controller_ros2_control/test/urdf/: chaining_joint_test.urdf.xacro  multiple_joints_test.urdf.xacro  single_joint_test.urdf.xacro
src/joint_controller_ros2_control/test/urdf/core/: joint_hardware_macros.urdf.xacro
src/leg_test/: meldog_leg_test.cpp
src/meldog_description/: CMakeLists.txt
src/meldog_leg_description/: CMakeLists.txt  package.xml
src/ros2_control_commands/: README.md
(+130 files in other folders)
